--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 description = "Generative AI for sythetic pdf content"
 authors = [{ name = "Aditya Acharya", email = "aditya02acharya@gmail.com" }]
 readme = "README.md"
-keywords = ['python']
+keywords = ['genai']
 requires-python = ">=3.9,<4.0"
 classifiers = [
     "Intended Audience :: Developers",
@@ -16,6 +16,18 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
+]
+dependencies = [
+    "anthropic>=0.50.0",
+    "langchain-anthropic>=0.3.12",
+    "langchain-openai>=0.3.14",
+    "langgraph>=0.3.34",
+    "matplotlib>=3.9.4",
+    "openai>=1.76.0",
+    "pydantic>=2.11.3",
+    "python-dotenv>=1.1.0",
+    "reportlab>=4.4.0",
+    "tqdm>=4.67.1",
 ]
 
 [project.urls]
@@ -94,11 +106,15 @@ select = [
     # tryceratops
     "TRY",
 ]
+extend-select = ["I"]
 ignore = [
     # LineTooLong
     "E501",
     # DoNotAssignLambda
     "E731",
+    "TRY300",
+    "TRY401",
+
 ]
 
 [tool.ruff.lint.per-file-ignores]
